rendered/envs/friclu/tempo/statefulset-tempo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: tempo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: tempo
    app.kubernetes.io/version: 2.9.0
    helm.sh/chart: tempo-1.24.0
  name: tempo
  namespace: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: tempo
      app.kubernetes.io/name: tempo
  serviceName: tempo-headless
  template:
    metadata:
      annotations:
        checksum/config: cb4321f5bf8531bfd5e0879c992b8c7eb906e3b26e34a63e6c36971e0aafc8fe
      labels:
        app.kubernetes.io/instance: tempo
        app.kubernetes.io/name: tempo
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - -config.file=/conf/tempo.yaml
            - -mem-ballast-size-mbs=1024
          env: null
          image: grafana/tempo:2.9.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 3200
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: tempo
          ports:
            - containerPort: 3200
              name: prom-metrics
            - containerPort: 6831
              name: jaeger-thrift-c
              protocol: UDP
            - containerPort: 6832
              name: jaeger-thrift-b
              protocol: UDP
            - containerPort: 14268
              name: jaeger-thrift-h
            - containerPort: 14250
              name: jaeger-grpc
            - containerPort: 9411
              name: zipkin
            - containerPort: 55680
              name: otlp-legacy
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 55681
              name: otlp-httplegacy
            - containerPort: 4318
              name: otlp-http
            - containerPort: 55678
              name: opencensus
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 3200
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          volumeMounts:
            - mountPath: /conf
              name: tempo-conf
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccountName: tempo
      volumes:
        - configMap:
            name: tempo
          name: tempo-conf
  updateStrategy:
    type: RollingUpdate
